--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <section class="text-center" id="services">
 	 
-<h1> Welcome to our website </h1>
+<h1> Welcome to our git git git git  website </h1>
 
   <div class="container">
   	<div class="row"> 
