--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 <section class="text-center" id="services">
-	 
+<h1>Github sucks</h1>	 
 <h1> Welcome to our git git git git  website </h1>
 
   <div class="container">
